added blockingqueue, extra status handling threads, fixed bug of bytearray concurrent write, small bugfixes